sentinai-backend/src/services/snapshots/sentinai_backend__services__ci_generator__tests__node_ci_yaml.snap
---
source: src/services/ci_generator.rs
expression: yaml
---
name: Sentinai Node CI

on:
  push:
    branches: [ "main" ]

jobs:
  build:
    runs-on: ubuntu-latest
    steps:
    - uses: actions/checkout@v3
    - uses: actions/setup-node@v3
      with:
        node-version: 18
    - run: npm install
    - run: npm test
    - run: npm audit
