sentinai-backend/src/services/snapshots/sentinai_backend__services__ci_generator__tests__python_ci_yaml.snap
---
source: src/services/ci_generator.rs
expression: yaml
---
name: Sentinai Python CI

on:
  push:
    branches: [ "main" ]

jobs:
  build:
    runs-on: ubuntu-latest
    steps:
    - uses: actions/checkout@v3
    - uses: actions/setup-python@v4
      with:
        python-version: '3.10'
    - run: pip install -r requirements.txt
    - run: pytest
    - run: safety check
