sentinai-backend/src/services/snapshots/sentinai_backend__services__ci_generator__tests__unknown_ci_yaml.snap
---
source: src/services/ci_generator.rs
expression: yaml
---
# Fallback Pipeline
name: Generic
jobs:
  build:
    runs-on: ubuntu-latest
    steps:
    - run: echo 'Unknown project'
